# ai-fuel-engine

./: .gitignore  CONTRIBUTING.md  README.md  __init__.py  engine.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
active_learning/: __init__.py  feedback_processor.py  review_queue.py
classifier/: __init__.py  keyword_router.py  llm_classifier.py  medical_taxonomy.json  orchestrator.py  semantic_matcher.py
core/: __init__.py  config.py  metrics.py  phi_protection.py  schemas.py  utils.py
dedup/: __init__.py  context_protector.py  engine.py  exact_dedup.py  semantic_dedup.py
docker/: Dockerfile  docker-compose.yml
export/: __init__.py  csv_exporter.py  jsonl_exporter.py  parquet_exporter.py  pipeline.py  rag_exporter.py
segmenter/: __init__.py  chunk_validator.py  context_preserver.py  document_segmenter.py
tests/: __init__.py  test_classifier.py  test_config.py  test_dedup.py  test_export.py  test_schemas.py  test_segmenter.py
