[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-fuel-engine"
version = "1.0.0"
description = "Transform scanned medical books into AI-ready datasets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Dr. Abdulmalek"}]
keywords = ["ocr", "medical", "nlp", "dataset", "arabic", "english", "ai", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

[project.optional-dependencies]
gpu = ["torch>=2.0.0", "transformers>=4.25.0", "faiss-gpu>=1.7.4"]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "black>=23.0.0", "flake8>=6.0.0"]
all = ["ai-fuel-engine[gpu,dev]"]

[project.scripts]
ai-fuel = "engine:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests (fast)",
    "integration: Integration tests (slow)",
    "benchmark: Performance benchmarks",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.setuptools.packages.find]
include = ["*", "core/*", "segmenter/*", "classifier/*", "dedup/*", "export/*", "active_learning/*"]
